--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
 	"type": "module",
 	"dependencies": {
 		"chart.js": "^4.4.0",
+		"flowbite-svelte-icons": "^0.4.2",
 		"lodash": "^4.17.21",
+		"mongodb": "^6.0.0",
+		"mongoose": "^7.5.0",
 		"svelte-chartjs": "^3.1.2"
 	},
 	"overrides": {
